--- a/config/YOLOv5_rackrow.yaml
+++ b/config/YOLOv5_rackrow.yaml
@@ -23,12 +23,12 @@ yolov5_train:
   sync_bn: False  #use SyncBatchNorm, only available in DDP mode
   workers: 8  #maximum number of dataloader workers
   project: '../runs/new_rackrow/train'  #save to project/name
-  name: 'main_exp_all'
+  name: 'new_main_exp_all'
   exist_ok: False  #existing project/name ok, do not increment
   quad:  #quad dataloader
   linear_lr: False
   label_smoothing: 0.0  #Label smoothing epsilon
-  patience: 100   #EarlyStopping patience (epochs without improvement)
+  patience: 10   #EarlyStopping patience (epochs without improvement)
   freeze: 0  #Number of layers to freeze. backbone=10, all=24
   save_period: -1  #Save checkpoint every x epochs (disabled if < 1)
   local_rank: -1  #DDP parameter, do not modify
@@ -68,7 +68,7 @@ mlflow_logging:
     uri_train_valid: file:///media/premium/common-biscuit/main/planogram_biscuit/model_tracking/experiments
     port: 5050
     host: localhost
-    temp_artifacts_location: /home/sumit-tyagi/sumit-ssd/common-biscuit/main/planogram_biscuit/model_tracking/artifacts_temp/
+    temp_artifacts_location: /media/premium/common-biscuit/main/planogram_biscuit/model_tracking/artifacts_temp
 path:
     data: ../data/
     validation_images: 
