--- a/config/YOLOv5_rackrow.yaml
+++ b/config/YOLOv5_rackrow.yaml
@@ -1,10 +1,11 @@
 ---
 yolov5_train:
+  model_name: 'yolov5s'
   weights: '../model/pretrained_yolo/yolov5s.pt'  #initial weights path
   cfg: ''  #model.yaml path
   data: '../config/data_config/rackrow.yaml'  #dataset.yaml path
   hyp: '../config/hyps/hyp.scratch.yaml'  #hyperparameters path
-  epochs: 150
+  epochs: 200
   batch_size: 16
   imgsz: 640  #train, val image size (pixels)
   rect: False #rectangular training
