--- a/config/YOLOv5_rackrow.yaml
+++ b/config/YOLOv5_rackrow.yaml
@@ -40,24 +40,24 @@ yolov5_train:
 
 yolov5_detect:
   weights: '/media/premium/common-biscuit/main/planogram_biscuit/runs/new_rackrow/train/main_exp_all2/weights/best.pt'   #model.pt path(s)
-  source: '/media/premium/common-biscuit/main/planogram_biscuit/data/rackrow_dataset/images/test'
+  source: '/media/premium/common-biscuit/main/planogram_biscuit/data/rackrow_dataset/images/test/'
   imgsz: [640]
   conf_thres: 0.50  #object confidence threshold
   iou_thres: 0.45  #IOU threshold for NMS
   max_det: 300  # maximum detections per image
   device: ''  # cuda device, i.e. 0 or 0,1,2,3 or cpu
   view_img: False  # show results
-  save_txt: True  # save results to *.txt
-  save_conf: True  # save confidences in --save-txt labels
+  save_txt: False  # save results to *.txt
+  save_conf: False  # save confidences in --save-txt labels
   save_crop: False  # save cropped prediction boxes
-  nosave: False  # do not save images/videos
+  nosave: True  # do not save images/videos
   classes:  # filter by class: --class 0, or --class 0 2 3
   agnostic_nms: False  # class-agnostic NMS
   augment: False  # augmented inference
   visualize: False  # visualize features
   update: False  # update all models
   project: '../runs/new_rackrow/detect'  # save results to project/name
-  name: 'exp'  # save results to project/name
+  name: 'exp_all'  # save results to project/name
   exist_ok: False  # existing project/name ok, do not increment
   line_thickness: 3  # bounding box thickness (pixels)
   hide_labels: False  # hide labels
