--- a/config/production_config.yaml
+++ b/config/production_config.yaml
@@ -1,9 +1,7 @@
 ---
 path:
     blob_base_dir: /media/premium/common-biscuit/
-    data: /mnt/common/data/
-    labels: labels/0824/
-    test: test/0916/
+    data: main/planogram_biscuit/data/
     images: images
     raw: /mnt/common/data/raw/
     annotations: annotations
@@ -11,18 +9,105 @@ path:
     classes: /mnt/common/data/lookups/predefined_classes.txt
     non_packet: /mnt/common/data/lookups/non_packets.txt
     project: /tf/
-    packet_lookup: /mnt/common/data/lookups/rack_model_lookup.csv
+    packets_lookup: 'lookups/packets_lookup.csv'
+    rackrow_lookup: 'lookups/rackrow_lookup.csv'
+    validation_images: ''
+    remove_images_json: '/media/premium/common-biscuit/main/planogram_biscuit/data/output/remove_images'
 
-data_path:
+
+data_path: 
     blob_base_dir: /media/premium/common-biscuit/ 
     images_dir: main/planogram_biscuit/data/raw/all_images_12Nov/ # folder for incremental images (need to check the input data stream in production)
     output_images_folder: op_annotations_new/ # sub-folder under which annotations would be stored (to be automated later on)
-    
+    refrained_images_file: /home/sumit-tyagi/sumit-ssd/common-biscuit/main/planogram_biscuit/data/output/remove_images/remove_images_08_12_2021.json # folder for refrained images
+
+
+yolov5_detect_packets:
+  model_version: 'medium'
+  weights_small: '/media/premium/common-biscuit/main/planogram_biscuit/runs/packets/train/new_main_exp_all/weights/best.pt'
+  #weights_medium: '/media/premium/common-biscuit/main/planogram_biscuit/runs/packets/train/new_main_exp_all_medium/weights/best.pt'   #model.pt path(s)
+  weights_medium: '/media/premium/common-biscuit/main/planogram_biscuit/runs/packets/train/new_main_exp_all_medium_642/weights/best.pt'
+  imgsz: [640]
+  conf_thres: 0.4  #object confidence threshold
+  iou_thres: 0.5  #IOU threshold for NMS
+  max_det: 1000  # maximum detections per image
+  device: ''  # cuda device, i.e. 0 or 0,1,2,3 or cpu
+  view_img: False  # show results
+  save_txt: False  # save results to *.txt
+  save_conf: False  # save confidences in --save-txt labels
+  save_crop: False  # save cropped prediction boxes
+  nosave: True  # do not save images/videos
+  classes:  # filter by class: --class 0, or --class 0 2 3
+  agnostic_nms: False  # class-agnostic NMS
+  augment: False  # augmented inference
+  visualize: False  # visualize features
+  update: False  # update all models
+  project: '../runs/packets/detect'  # save results to project/name
+  name: 'new_main_exp_all_medium'  # save results to project/name
+  exist_ok: False  # existing project/name ok, do not increment
+  line_thickness: 3  # bounding box thickness (pixels)
+  hide_labels: True  # hide labels
+  hide_conf: False  # hide confidences
+  half: False  # use FP16 half-precision inference
+
+yolov5_detect_rackrow:
+  model_version: 'small'
+  #weights_small: '/media/premium/common-biscuit/main/planogram_biscuit/runs/new_rackrow/train/main_exp_all2/weights/best.pt'   #model.pt path(s)
+  weights_small: '/media/premium/common-biscuit/main/planogram_biscuit/runs/new_rackrow/train/new_main_exp_all_642/weights/best.pt'
+  weights_medium: ''
+  imgsz: [640]
+  conf_thres: 0.50  #object confidence threshold
+  iou_thres: 0.45  #IOU threshold for NMS
+  max_det: 300  # maximum detections per image
+  device: ''  # cuda device, i.e. 0 or 0,1,2,3 or cpu
+  view_img: False  # show results
+  save_txt: False  # save results to *.txt
+  save_conf: False  # save confidences in --save-txt labels
+  save_crop: False  # save cropped prediction boxes
+  nosave: True  # do not save images/videos
+  classes:  # filter by class: --class 0, or --class 0 2 3
+  agnostic_nms: False  # class-agnostic NMS
+  augment: False  # augmented inference
+  visualize: False  # visualize features
+  update: False  # update all models
+  project: '../runs/new_rackrow/detect'  # save results to project/name
+  name: 'exp_all'  # save results to project/name
+  exist_ok: False  # existing project/name ok, do not increment
+  line_thickness: 3  # bounding box thickness (pixels)
+  hide_labels: False  # hide labels
+  hide_conf: False  # hide confidences
+  half: False  # use FP16 half-precision inference
+
+mlflow_logging: 
+    artifacts_location: file:///media/premium/common-biscuit/main/planogram_biscuit/model_tracking/artifacts
+    uri_train_valid: file:///media/premium/common-biscuit/main/planogram_biscuit/model_tracking/experiments
+    port: 5050
+    host: localhost
+    temp_artifacts_location: /media/premium/common-biscuit/main/planogram_biscuit/model_tracking/artifacts_temp
+
+packets_detection:
+    output_dir: main/planogram_biscuit/data/output/image_annotations/packets_detection/  # save json files
+
+rackrow_detection:
+    output_dir: main/planogram_biscuit/data/output/image_annotations/rackrow_detection/  # save json files
+
+sub_brand_detection:
+    model_dir: main/planogram_biscuit/model/sub_brand_classification/1021_InceptionResNetV2_0.0002LR_20Epoch_45Classes/
+    input_json: main/planogram_biscuit/data/output/image_annotations/packets_detection/  # output from the packet detection model in json format
+    cropped_size: 128  # to be used same as was used in training (would be automated in next iterations)
+    output_dir: main/planogram_biscuit/data/output/image_annotations/sub_brand_detection/
+
+integrated_output:
+    packets_output_dir: main/planogram_biscuit/data/output/image_annotations/packets_detection/
+    rackrow_output_dir: main/planogram_biscuit/data/output/image_annotations/rackrow_detection/
+    sub_brand_output_dir: main/planogram_biscuit/data/output/image_annotations/sub_brand_detection/
+    integrated_dir: main/planogram_biscuit/data/output/image_annotations/integrated/
+
 compliance:
     path:
         image_output: data/output/image_annotations/test_outputs
         output: data/output/compliance/location_pickles/test_loader
-        output_prev_after_comparsion: main/planogram_biscuit/data/output/compliance/prev_after/
+        output_prev_after_comparsion: main/planogram_biscuit/data/output/compliance/prev_after_updated/
     threshold:
         packet_row_overlap_thresh: 0.7
         packet_top_row_overlap_thresh: 0.5
@@ -37,37 +122,8 @@ compliance:
         blank_predicted_overlap_iou: 0.5 
         missing_mid_row_thresh: 2.2
 
-packets_detection:
-    # model_path: models/packets_yolo/models/0926_packets_all-layerstrained_110-epochs_8-batch_0.001-learning_rate_2-stage_colored.h5
-    # anchors_path: model_setup/packets_yolo/0925_anchor_boxes.txt
-    # classes_path: model_setup/packets_yolo/predefined_classes.txt
-    # colored_model: True
-    # score: 0.20  # confidence score for prediction
-    # iou: 0.5  # iou threshold for prediction
-    # max_boxes: 75  # max. number of packets detected in a image
-    output_dir: main/planogram_biscuit/data/output/image_annotations/packets_detection/  # save json files
-    # image_size: 608  # recommended 608 for predictions
-    
-rackrow_detection:
-    # model_path: models/rack_row_yolo/models/0603_rack_row_all-layerstrained_110-epochs_4-batch_0.001-learning_rate_2-stage_colored.h5
-    # anchors_path: model_setup/rack_row_yolo/0930_anchor_boxes.txt
-    # classes_path: model_setup/rack_row_yolo/0924_predefined_classes.txt
-    # colored_model: True
-    # score: 0.20  # confidence score for prediction
-    # iou: 0.5  # iou threshold for prediction
-    # max_boxes: 7  # max. number of racks detected in a image
-    output_dir: main/planogram_biscuit/data/output/image_annotations/rackrow_detection/  # save json files
-    #image_size: 608  # recommended 608 for predictions
-    
-    
-sub_brand_detection:
-    model_dir: main/planogram_biscuit/model/sub_brand_classification/1021_InceptionResNetV2_0.0002LR_20Epoch_45Classes/
-    input_json: main/planogram_biscuit/data/output/image_annotations/packets_detection/  # output from the packet detection model in json format
-    cropped_size: 128  # to be used same as was used in training (would be automated in next iterations)
-    output_dir: main/planogram_biscuit/data/output/image_annotations/sub_brand_detection/
-
-integrated_output:
-    sub_brand_output_dir: main/planogram_biscuit/data/output/image_annotations/sub_brand_detection/
-    rackrow_output_dir: main/planogram_biscuit/data/output/image_annotations/rackrow_detection/
-    integrated_dir: main/planogram_biscuit/data/output/image_annotations/integrated/
-...
+image_check:
+    total_detection_threshold: 0.5
+    rack_area_threshold: 50
+    packets_area_threshold: 75
+    row_count_threshold: 1
